--- a/qml.qrc
+++ b/qml.qrc
@@ -15,5 +15,7 @@
         <file>src/mainview/components/MessageWebViewHeader.qml</file>
         <file>src/commoncomponents/HoverableButton.qml</file>
         <file>src/mainview/components/AccountComboBox.qml</file>
+        <file>src/wizardview/WizardView.qml</file>
+        <file>src/wizardview/components/WelcomePageLayout.qml</file>
     </qresource>
 </RCC>
