--- a/ressources.qrc
+++ b/ressources.qrc
@@ -10,6 +10,7 @@
         <file>stylesheet.css</file>
         <file>stylesheet.linux.css</file>
         <file>changelog.html</file>
+        <file>projectcredits.html</file>
         <file>images/ajax-loader.gif</file>
         <file>images/default_avatar_overlay.svg</file>
         <file>images/FontAwesome.otf</file>
@@ -37,7 +38,7 @@
         <file>images/icons/ic_check_white_18dp_2x.png</file>
         <file>images/icons/ic_clear_24px.svg</file>
         <file>images/icons/ic_close_white_24dp.png</file>
-        <file>images/icons/ic_content_copy_white_24dp.png</file>
+        <file>images/icons/ic_content_copy.svg</file>
         <file>images/icons/ic_delete_black_18dp_2x.png</file>
         <file>images/icons/ic_done_white_24dp.png</file>
         <file>images/icons/ic_folder_black_18dp_2x.png</file>
