mainview: callwidget implementation in qml
Change-Id: Ie83374eba7751b688139bcd2aec0da12ad5c1469

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,9 @@
         <file>src/KeyBoardShortcutKey.qml</file>
         <file>src/UserProfileCard.qml</file>
         <file>src/MainApplicationWindow.qml</file>
+        <file>src/MainView.qml</file>
+        <file>src/CustomBorder.qml</file>
+        <file>src/ColorConstant.qml</file>
+        <file>src/AboutPopUp.qml</file>
     </qresource>
 </RCC>
