--- a/qml.qrc
+++ b/qml.qrc
@@ -16,7 +16,6 @@
         <file>src/commoncomponents/HoverableButton.qml</file>
         <file>src/mainview/components/AccountComboBox.qml</file>
         <file>src/mainview/components/ConversationSmartListView.qml</file>
-
         <file>src/wizardview/WizardView.qml</file>
         <file>src/wizardview/components/WelcomePageLayout.qml</file>
         <file>src/wizardview/components/CreateAccountPage.qml</file>
@@ -26,5 +25,15 @@
         <file>src/wizardview/components/ImportFromDevicePage.qml</file>
         <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
         <file>src/wizardview/components/SpinnerPage.qml</file>
+        <file>src/settingsview/SettingsView.qml</file>
+        <file>src/settingsview/components/IconButton.qml</file>
+        <file>src/settingsview/components/LeftPanelView.qml</file>
+        <file>src/settingsview/components/AvSettingPage.qml</file>
+        <file>src/settingsview/components/GeneralSettingsPage.qml</file>
+        <file>src/settingsview/components/CurrentAccountSettingsScrollPage.qml</file>
+        <file>src/settingsview/components/CurrentSIPAccountSettingScrollPage.qml</file>
+        <file>src/settingsview/components/ToggleSwitch.qml</file>
+        <file>src/settingsview/components/AdvancedSettingsView.qml</file>
+        <file>src/settingsview/components/AdvancedSIPSettingsView.qml</file>
     </qresource>
 </RCC>
