settingsview: implement setting widget in qml
Change-Id: I6700e2b5c0a01d5a512416ec53711e8c09150567

--- a/qml.qrc
+++ b/qml.qrc
@@ -10,7 +10,6 @@
         <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
         <file>src/wizardview/components/SpinnerPage.qml</file>
         <file>src/wizardview/components/CollapsiblePasswordWidget.qml</file>
-
         <file>src/MainApplicationWindow.qml</file>
         <file>src/mainview/MainView.qml</file>
         <file>src/commoncomponents/CustomBorder.qml</file>
@@ -33,5 +32,24 @@
         <file>src/mainview/components/CallOverlayButtonGroup.qml</file>
         <file>src/mainview/components/CallCenter.qml</file>
         <file>src/mainview/js/incomingcallpagecreation.js</file>
+        <file>src/wizardview/WizardView.qml</file>
+        <file>src/wizardview/components/WelcomePageLayout.qml</file>
+        <file>src/wizardview/components/CreateAccountPage.qml</file>
+        <file>src/wizardview/components/CreateSIPAccountPage.qml</file>
+        <file>src/wizardview/components/ImportFromBackupPage.qml</file>
+        <file>src/wizardview/components/BackupKeyPage.qml</file>
+        <file>src/wizardview/components/ImportFromDevicePage.qml</file>
+        <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
+        <file>src/wizardview/components/SpinnerPage.qml</file>
+        <file>src/settingsview/SettingsView.qml</file>
+        <file>src/settingsview/components/IconButton.qml</file>
+        <file>src/settingsview/components/LeftPanelView.qml</file>
+        <file>src/settingsview/components/AvSettingPage.qml</file>
+        <file>src/settingsview/components/GeneralSettingsPage.qml</file>
+        <file>src/settingsview/components/CurrentAccountSettingsScrollPage.qml</file>
+        <file>src/settingsview/components/CurrentSIPAccountSettingScrollPage.qml</file>
+        <file>src/settingsview/components/ToggleSwitch.qml</file>
+        <file>src/settingsview/components/AdvancedSettingsView.qml</file>
+        <file>src/settingsview/components/AdvancedSIPSettingsView.qml</file>
     </qresource>
 </RCC>
