settingsview: implement setting widget in qml
Change-Id: I6700e2b5c0a01d5a512416ec53711e8c09150567

--- a/qml.qrc
+++ b/qml.qrc
@@ -24,5 +24,6 @@
         <file>src/wizardview/components/ImportFromDevicePage.qml</file>
         <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
         <file>src/wizardview/components/SpinnerPage.qml</file>
+        <file>src/settingsview/SettingsView.qml</file>
     </qresource>
 </RCC>
