settingsview: implement setting widget in qml
Change-Id: I6700e2b5c0a01d5a512416ec53711e8c09150567

--- a/qml.qrc
+++ b/qml.qrc
@@ -30,5 +30,15 @@
         <file>src/wizardview/components/ImportFromDevicePage.qml</file>
         <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
         <file>src/wizardview/components/SpinnerPage.qml</file>
+        <file>src/settingsview/SettingsView.qml</file>
+        <file>src/settingsview/components/IconButton.qml</file>
+        <file>src/settingsview/components/LeftPanelView.qml</file>
+        <file>src/settingsview/components/AvSettingPage.qml</file>
+        <file>src/settingsview/components/GeneralSettingsPage.qml</file>
+        <file>src/settingsview/components/CurrentAccountSettingsScrollPage.qml</file>
+        <file>src/settingsview/components/CurrentSIPAccountSettingScrollPage.qml</file>
+        <file>src/settingsview/components/ToggleSwitch.qml</file>
+        <file>src/settingsview/components/AdvancedSettingsView.qml</file>
+        <file>src/settingsview/components/AdvancedSIPSettingsView.qml</file>
     </qresource>
 </RCC>
