--- a/stylesheet.css
+++ b/stylesheet.css
@@ -165,6 +165,30 @@ QScrollBar::handle:vertical {
     max-width: 0px;
 }
 
+QScrollBar:horizontal {
+    border: 2px solid grey;
+    background: grey;
+    height: 10px;
+}
+
+QScrollBar::handle:horizontal {
+    background: white;
+    min-width: 20px;
+    border-radius: 10px;
+}
+
+QScrollBar::add-line:horizontal {
+    height: 0px;
+}
+
+QScrollBar::sub-line:horizontal {
+    height: 0px;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
+    height: 0px;
+}
+
 SmartListView {
     background-color: white;
     border: none;
@@ -186,6 +210,15 @@ QWidget#messagingHeaderWidget {
 
 QWidget#messageViewLayoutWidget, QWidget#welcomePage {
     background-color: rgba(255, 255, 255, 255);
+}
+
+QWidget#newWizardWidgetScrollAreaContents, QWidget#settingsWidgetScrollAreaContents {
+    background-color: rgba(255, 255, 255, 255);
+    border: none;
+}
+
+QScrollArea#newWizardWidgetScrollArea, QScrollArea#settingsWidgetScrollArea {
+    border: none;
 }
 
 QPushButton#holdButton, QPushButton#chatButton, QPushButton#noMicButton, QPushButton#noVideoButton, QPushButton#hangupButton,
