--- a/qml.qrc
+++ b/qml.qrc
@@ -16,5 +16,9 @@
         <file>src/mainview/components/AccountComboBox.qml</file>
         <file>src/mainview/components/ConversationSmartListView.qml</file>
         <file>src/commoncomponents/JamiFileDialog.qml</file>
+        <file>src/mainview/components/CallStackViewWindow.qml</file>
+        <file>src/mainview/components/IncomingCallPage.qml</file>
+        <file>src/mainview/components/OutgoingCallPage.qml</file>
+        <file>src/mainview/components/AudioCallPage.qml</file>
     </qresource>
 </RCC>
