publishedSameAsLocal: value should be reverted in toggle switch
Change-Id: Ide10c28efd1ca369de1e589c3bc2a32bf1df2cc0

--- a/src/advancedsipsettingwidget.ui
+++ b/src/advancedsipsettingwidget.ui
@@ -1690,7 +1690,7 @@
             </font>
            </property>
            <property name="echoMode">
-            <enum>QLineEdit::PasswordEchoOnEdit</enum>
+            <enum>QLineEdit::Normal</enum>
            </property>
            <property name="placeholderText">
             <string/>
