processes: make sure that all jami related processes are closed during the update
Change-Id: I64cb7e86e2ff418c03ea374e05e14d43c8597acc

--- a/JamiInstaller/Product.wxs
+++ b/JamiInstaller/Product.wxs
@@ -39,7 +39,13 @@
     <WixVariable Id="WixUISupportPerUser" Value="0" />
 
     <CustomAction Id="removeOldJamiFiles" Directory="APPLICATIONFOLDER" ExeCommand="cmd /c &quot;del vc_redist.x64.exe; del uninstall.exe; del WinSparkle.dll;&quot;" Execute="deferred" Return="ignore" HideTarget="no" Impersonate="no" />
-
+    
+    <Property Id="QtExecCmdLine" Value='"[WindowsFolder]\System32\taskkill.exe" /F /IM QtWebEngineProcess.exe /IM Jami.exe'/>
+    <CustomAction Id="JamiProcesses.TaskKill"
+                  BinaryKey="WixCA"
+                  DllEntry="CAQuietExec"
+                  Execute="immediate"
+                  Return="ignore"/>
   </Product>
 
   <Fragment Id="DirectoryStructure">
@@ -51,6 +57,7 @@
       <Directory Id="ProgramMenuFolder">
         <Directory Id="ApplicationProgramsFolder" />
       </Directory>
+      <Directory Id="WindowsFolder" Name="WINDOWS"/>
     </Directory>
   </Fragment>
 
@@ -104,6 +111,7 @@
       </InstallUISequence>
     </UI>
     <InstallExecuteSequence>
+      <Custom Action='JamiProcesses.TaskKill' Before='InstallValidate'/>
       <Custom Action="removeOldJamiFiles" After="RemoveFiles" />
       <Custom Action="LaunchApplication_nonUI" After="InstallFinalize"> WIXNONUILAUNCH </Custom>
       <Custom Action="Overwrite_WixSetDefaultPerMachineFolder" After="WixSetDefaultPerMachineFolder" />
