--- a/qml.qrc
+++ b/qml.qrc
@@ -34,6 +34,7 @@
         <file>src/commoncomponents/TintedButton.qml</file>
         <file>src/mainview/components/CallOverlayButtonGroup.qml</file>
         <file>src/mainview/js/incomingcallpagecreation.js</file>
+        <file>src/js/mainapplicationcomponentcreation.js</file>
         <file>src/mainview/components/ContactSearchBar.qml</file>
         <file>src/mainview/components/VideoCallPage.qml</file>
         <file>src/mainview/components/ChangeLogScrollView.qml</file>
