connection: mainview and wizard view logic connection
Change-Id: I9a5c6e6b030ce5cab3d0560ff1125de0f2e7f541

--- a/qml.qrc
+++ b/qml.qrc
@@ -10,7 +10,6 @@
         <file>src/wizardview/components/ConnectToAccountManagerPage.qml</file>
         <file>src/wizardview/components/SpinnerPage.qml</file>
         <file>src/wizardview/components/CollapsiblePasswordWidget.qml</file>
-
         <file>src/MainApplicationWindow.qml</file>
         <file>src/mainview/MainView.qml</file>
         <file>src/commoncomponents/CustomBorder.qml</file>
@@ -33,5 +32,6 @@
         <file>src/mainview/components/CallOverlayButtonGroup.qml</file>
         <file>src/mainview/components/CallCenter.qml</file>
         <file>src/mainview/js/incomingcallpagecreation.js</file>
+        <file>src/js/mainapplicationcomponentcreation.js</file>
     </qresource>
 </RCC>
