mainview: implement logic for contact searching and contact request
Change-Id: Idf69beff0ac33cea1f88011d738c7aff6eca9f08

--- a/qml.qrc
+++ b/qml.qrc
@@ -22,5 +22,6 @@
         <file>src/mainview/components/CallOverlayButtonGroup.qml</file>
         <file>src/mainview/components/CallCenter.qml</file>
         <file>src/mainview/js/incomingcallpagecreation.js</file>
+        <file>src/mainview/components/ContactSearchBar.qml</file>
     </qresource>
 </RCC>
