mainview: video call implementation
Change-Id: Ib345078fd4a5f32f3f005a7d75ded45c0bd78f64

--- a/qml.qrc
+++ b/qml.qrc
@@ -23,5 +23,6 @@
         <file>src/mainview/components/CallCenter.qml</file>
         <file>src/mainview/js/incomingcallpagecreation.js</file>
         <file>src/mainview/components/ContactSearchBar.qml</file>
+        <file>src/mainview/components/VideoCallPage.qml</file>
     </qresource>
 </RCC>
