--- a/qml.qrc
+++ b/qml.qrc
@@ -30,5 +30,8 @@
         <file>src/mainview/components/ConversationSmartListUserImage.qml</file>
         <file>src/mainview/components/SidePanelTabBar.qml</file>
         <file>src/mainview/components/WelcomePageQrDialog.qml</file>
+        <file>src/commoncomponents/GeneralMenuItem.qml</file>
+        <file>src/mainview/components/ConversationSmartListContextMenu.qml</file>
+        <file>src/commoncomponents/GeneralMenuSeparator.qml</file>
     </qresource>
 </RCC>
