mainview: add conversation smart list context menu
Change-Id: I0d4413834037bd4bc286e78fd14fb9187a30cf57

--- a/qml.qrc
+++ b/qml.qrc
@@ -30,5 +30,6 @@
         <file>src/mainview/components/ConversationSmartListUserImage.qml</file>
         <file>src/mainview/components/SidePanelTabBar.qml</file>
         <file>src/mainview/components/WelcomePageQrDialog.qml</file>
+        <file>src/commoncomponents/GeneralMenuItem.qml</file>
     </qresource>
 </RCC>
