mainview: add user profile component
Change-Id: Iae4cfa9c2db262140d4f4aeb198d149b2ed41827

--- a/qml.qrc
+++ b/qml.qrc
@@ -33,5 +33,6 @@
         <file>src/commoncomponents/GeneralMenuItem.qml</file>
         <file>src/mainview/components/ConversationSmartListContextMenu.qml</file>
         <file>src/commoncomponents/GeneralMenuSeparator.qml</file>
+        <file>src/mainview/components/UserProfile.qml</file>
     </qresource>
 </RCC>
