--- a/qml.qrc
+++ b/qml.qrc
@@ -34,5 +34,12 @@
         <file>src/mainview/components/ConversationSmartListContextMenu.qml</file>
         <file>src/commoncomponents/GeneralMenuSeparator.qml</file>
         <file>src/mainview/components/UserProfile.qml</file>
+        <file>src/mainview/components/VideoCallPageContextMenu.qml</file>
+        <file>src/mainview/js/videodevicecontextmenuitemcreation.js</file>
+        <file>src/mainview/components/VideoCallPageContextMenuDeviceItem.qml</file>
+        <file>src/mainview/components/SelectScreen.qml</file>
+        <file>src/mainview/js/selectscreenwindowcreation.js</file>
+        <file>src/mainview/components/ScreenRubberBand.qml</file>
+        <file>src/mainview/js/screenrubberbandcreation.js</file>
     </qresource>
 </RCC>
