--- a/ressources.qrc
+++ b/ressources.qrc
@@ -41,7 +41,9 @@
         <file>images/icons/ic_content_copy.svg</file>
         <file>images/icons/ic_delete_black_18dp_2x.png</file>
         <file>images/icons/ic_done_white_24dp.png</file>
+        <file>images/icons/ic_exit_full_screen_black.png</file>
         <file>images/icons/ic_folder_black_18dp_2x.png</file>
+        <file>images/icons/ic_full_screen_black.png</file>
         <file>images/icons/ic_group_add_white_24dp.png</file>
         <file>images/icons/ic_high_quality_white_24dp.png</file>
         <file>images/icons/ic_mic_off_white_24dp.png</file>
