--- a/qml.qrc
+++ b/qml.qrc
@@ -34,5 +34,8 @@
         <file>src/mainview/components/ConversationSmartListContextMenu.qml</file>
         <file>src/commoncomponents/GeneralMenuSeparator.qml</file>
         <file>src/mainview/components/UserProfile.qml</file>
+        <file>src/mainview/components/VideoCallPageContextMenu.qml</file>
+        <file>src/mainview/js/videocontextmenucreation.js</file>
+        <file>src/mainview/components/VideoCallPageContextMenuDeviceItem.qml</file>
     </qresource>
 </RCC>
