wizard view: add photobooth to new wizard view in qml
Change-Id: If5ec77f0ff42e728b6d167409594dd4453f66f36

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>src/commoncomponents/PasswordDialog.qml</file>
         <file>src/commoncomponents/InfoLineEdit.qml</file>
+        <file>src/commoncomponents/PhotoboothView.qml</file>
         <file>src/wizardview/WizardView.qml</file>
         <file>src/wizardview/components/WelcomePageLayout.qml</file>
         <file>src/wizardview/components/CreateAccountPage.qml</file>
