wizard view: add photobooth to new wizard view in qml
Change-Id: If5ec77f0ff42e728b6d167409594dd4453f66f36

--- a/qml.qrc
+++ b/qml.qrc
@@ -46,5 +46,6 @@
         <file>src/mainview/components/UserProfile.qml</file>
         <file>src/commoncomponents/PasswordDialog.qml</file>
         <file>src/commoncomponents/InfoLineEdit.qml</file>
+        <file>src/commoncomponents/PhotoboothView.qml</file>
     </qresource>
 </RCC>
