mainview: conference call logic implementation
Change-Id: I3da6bed2d15703816620ddfb565c4aadf46cf5ac

--- a/qml.qrc
+++ b/qml.qrc
@@ -43,5 +43,8 @@
         <file>src/mainview/js/screenrubberbandcreation.js</file>
         <file>src/mainview/js/videocallfullscreenwindowcontainercreation.js</file>
         <file>src/mainview/components/VideoCallFullScreenWindowContainer.qml</file>
+        <file>src/mainview/components/ContactPicker.qml</file>
+        <file>src/mainview/js/contactpickercreation.js</file>
+        <file>src/mainview/components/ContactPickerItemDelegate.qml</file>
     </qresource>
 </RCC>
