mainview: add sip input panel
Change-Id: I9efd8e1575b9c97948a91800e28e9a8f52edf733

--- a/qml.qrc
+++ b/qml.qrc
@@ -46,5 +46,6 @@
         <file>src/mainview/components/ContactPicker.qml</file>
         <file>src/mainview/js/contactpickercreation.js</file>
         <file>src/mainview/components/ContactPickerItemDelegate.qml</file>
+        <file>src/mainview/components/SipInputPanel.qml</file>
     </qresource>
 </RCC>
