account migration manager: implement account manager for qml client
Change-Id: Icaf9259001f2907b38cd2846e6f4c33ae56433e7

--- a/qml.qrc
+++ b/qml.qrc
@@ -85,5 +85,6 @@
         <file>src/mainview/js/contactpickercreation.js</file>
         <file>src/mainview/components/ContactPickerItemDelegate.qml</file>
         <file>src/wizardview/components/HoverableGradientButton.qml</file>
+        <file>src/commoncomponents/AccountMigrationDialog.qml</file>
     </qresource>
 </RCC>
