send_media: added widgets to record and send audio and video
Change-Id: I56f609cd0e4f2b689aa4574163b569b2b80936f1
Gitlab: #515

--- a/qml.qrc
+++ b/qml.qrc
@@ -86,5 +86,6 @@
         <file>src/mainview/components/ContactPickerItemDelegate.qml</file>
         <file>src/wizardview/components/HoverableGradientButton.qml</file>
         <file>src/commoncomponents/AccountMigrationDialog.qml</file>
+        <file>src/mainview/components/RecordBox.qml</file>
     </qresource>
 </RCC>
